--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,9 @@
+*, *:before, *:after {
+   -moz-box-sizing: border-box;
+   -webkit-box-sizing: border-box;
+   box-sizing: border-box;
+}
+
 html {
     height: 100%; /*makes sure our HTML takes up 100% of the browser window*/
     font-size: 100;
@@ -10,85 +16,39 @@ body {
     min-height: 100%;      /*says the height of the body must be, at minimum, 100% of the window */
 }
 
-body.landing {
-    background-color: rgb(58,23,63); /*sets the background color to an RGB value(see below)*/
-    
-}
-
 .navbar {
     padding: 0.5rem;
     background-color: rgb(101,18,95);
 }
 
-.navbar.logo {
+.navbar > .logo {
     position: relative; /*positioning will be explaining in a resource*/
     left: 2rem;
-} 
-
-.hero.content {
-    position: relative; /*positioning will be explained in a resource */
-    min-height: 600px; /*hero content element must be _at least_600 pixels*/
-    background-image: url("../bloc_jams_bg.jpg");
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-size: cover;
-}
- .hero-content .hero-title {
-    position: absolute; 
-    top: 40%;
-    -webkit-transform: translateY(-50%);
-    -moz-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    width: 100%; /*makes sure the title inhabits the full width of the container*/
-    text-align: center; /*aligns text in the horizontal center of the element*/
-    font-size: 4rem; /*specifies the size of the font in root em units*/
-    font-weight: 300%; /*makes the font thinner or lighter weight*/
-    text-transform: uppercase; /*transforms the text to all uppercase lettering*/
-    letter-spacing: 0.5rem; /*puts 0.5 root ems worth of space between each letter*/
-    text-shadow: 1px 1px 0px rgb(58,23,63); /*creates a shadow underneath the text for readability over the image*/
-    
 }
 
-h1 {
-    left: 450px;
-    line-height: 200px;
-    margin: auto;
-    width: 100;
-    margin-top: -100px;
-    font-weight: 300%;
-    font-size: 4rem; 
-    position: absolute;
-    top: 50%;
-    width: 100%;
+.container {
+    margin: 0 auto;
+    max-width: 64rem;
 }
 
-.selling-points {
-    position: relative;
-    display: table;
-    width: 100%
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box; /*we'll explain this in a resource */
+/*Medium and small screens (640px) */
+@media (min-width: 640px) {
+    html { font-size: 112%; }
 }
 
-.point {
-    display: table-cell;
-    position: relative;
-    width: 33.3%
-    padding: 2rem;
-    text-align: center;
+.column {
+    float: left;
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-.point .point-title {
-    font-size: 1.2rem;
+.column.full {width: 100%; }
+.column.two-thirds {width: 66.7%; }
+.column.half {width: 50%; }
+.column.third {width: 33.3%; }
+.column.fourth {width: 25%; }
+.column.flow-opposite {float: right; }
+/* Large screens (1024px) */
+@media (min-width: 1024px) {
+     html { font-size: 112%;}
 }
-
-.ion-music-note,
-.ion-radio-waves,
-.ion-iphone {
-    color: rgb(233,50,117);
-    font-size: 5rem;
-}
-    
-
